--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Page Title</title>
+		<title>TODO list</title>
 		<script src="code.js" defer></script>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
-	<body>
+	<body onload="setHeader()">
+		<h1 id='page-header'>STUB</h1>
 	</body>
 </html>
