add checkbox fields

--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,14 @@
 	</head>
 	<body onload="setHeader()">
 		<h1 id='page-header'>STUB</h1>
+		<form action="/action_page.php">
+			<input type="checkbox" id="item1" name="item1" value="Home_routine">
+			<label for="item1">Prepare for Easter</label><br>
+			<input type="checkbox" id="item2" name="item2" value="Home_work">
+			<label for="item2">Create a TODO list</label><br>
+			<input type="checkbox" id="item3" name="item3" value="Shopping">
+			<label for="item3">Buy food for holidays</label><br><br>
+			<input type="submit" value="Submit">
+		  </form> 
 	</body>
 </html>
