--- a/src/item.html
+++ b/src/item.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>TODO items</title>
-		<script src="code.js" defer></script>
-		<link rel="stylesheet" href="styles.css" />
-	</head>
-	<body onload="setHeader()">
-		<h1 id='title'>TODO items</h1>
-		<form action="/action_page.php">
-		<label for="id">ID:</label>
-  		<input type="number" id="id" name="ID" value="1234" readonly><br>
-  		<label for="date">Date and time:</label>
-  		<input type="datetime-local" id="date" name="date&time"><br>
-		<label for="text">To do:</label><br>
-		<textarea name="message" rows="3" cols="33">Prepare for Easter.</textarea>
-		<br><br>
-		<button class="create-button">Create</button>
-		</form>
-	</body>
+
+<head>
+	<title>TODO items</title>
+	<script src="code.js" defer></script>
+	<link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+	<h1>TODO items</h1>
+	<div>
+		<!-- <div>
+			<label for="id">ID:</label>
+			<input type="number" id="id" name="ID" value="1234" readonly>
+		</div> -->
+		<div>
+			<label for="text">Title:</label>
+			<input id="title"/>
+		</div>
+		<div>
+			<label for="date">Date and time:</label>
+			<input type="datetime-local" id="date" name="date&time"/>
+		</div>
+		<div>
+			<label for="text">To do:</label>
+			<textarea name="message" id="description" rows="3" cols="33">Prepare for Easter.</textarea>
+		</div>
+		<div>
+			<button class="create-button" onclick="createItem()">Create</button>
+		</div>
+	</div>
+</body>
+
 </html>
