create items list

--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,19 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>TODO list</title>
-		<script src="code.js" defer></script>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<link rel="stylesheet" href="styles.css" />
-	</head>
-	<body onload="setHeader()">
-		<h1 id='page-header'>STUB</h1>
-		<div class="item-container">
-			<div class="item">
-				<input type="checkbox" id="item1" name="item1" value="Home_routine">
-				<label class="item-name" for="item1" title="Prepare for Easter">Prepare for Easter</label>
-				<button class="material-icons icon-font-size" onclick="editFunction">edit</button>
-			</div>
-			<div class="item">
-				<input type="checkbox" id="item2" name="item2" value="Home_work">
-				<label class="item-name" for="item2" title="Create a TODO list">Create a TODO list</label>
-				<button class="material-icons" onclick="editFunction">edit</button>
-			</div>
-			<div class="item">
-				<input type="checkbox" id="item3" name="item3" value="Shopping">
-				<label class="item-name" for="item3" title="Buy food for holidays">Buy food for holidays</label>
-				<button class="material-icons" onclick="editFunction">edit</button>
-			</div>
-		</div>
-		<div>
-			<button onclick="navigateToNewItem()">Create new</button>
-		</div>
-	</body>
+
+<head>
+	<title>TODO list</title>
+	<script src="code.js" defer></script>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="styles.css" />
+</head>
+
+<body onload="showItems()">
+	<h1 id='page-header'>STUB</h1>
+	<div class="item-container" id="container"></div>
+	<div>
+		<button onclick="navigateToNewItem()">Create new</button>
+	</div>
+</body>
+
 </html>
