add update mode to html element and cancel button

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body onload="showItems()">
-	<h1 id='page-header'>STUB</h1>
+	<h1 id='page-header'>TODO list</h1>
 	<div class="item-container" id="container"></div>
 	<div>
-		<button onclick="navigateToNewItem()">Create new</button>
+		<button class="create-new" onclick="navigateToNewItem()">Create new</button>
 	</div>
 </body>
 
