add confirm to deleteFunction

--- a/src/item.html
+++ b/src/item.html
@@ -19,7 +19,7 @@
 			<input id="title"/>
 		</div>
 		<div>
-			<label for="date">Date and time:</label>
+			<label for="date">Date & time:</label>
 			<input type="datetime-local" id="date" name="date&time"/>
 		</div>
 		<div>
