--- a/src/item.html
+++ b/src/item.html
@@ -9,7 +9,7 @@
 
 <body onload="itemIsLoaded()">
 	<h1>TODO items</h1>
-	<div>
+	<div class="wrapper">
 		<!-- <div>
 			<label for="id">ID:</label>
 			<input type="number" id="id" name="ID" value="1234" readonly>
