--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body onload="showItems()">
 	<h1 id='page-header'>TODO list</h1>
 	<div class="item-container" id="container"></div>
-	<div>
+	<div class="wrapper">
 		<button class="create-new" onclick="navigateToNewItem()">Create new</button>
 	</div>
 </body>
